--- a/styles/general.css
+++ b/styles/general.css
@@ -1,10 +1,7 @@
-. body {
-  background-image: url("images/spaceforthoughts.jpg");
-  background-repeat: no-repeat;
-  background-position: top right;
-  background-size: cover;
-  background-color: #c95a42;
-}
-.hero {
-  background-image: none;
-}
+  .hero {
+    background-image: url("images/spaceforthoughts.jpg");
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: cover;
+    background-attachment: scroll;
+  }
