--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,5 @@
   .hero {
-    background-image: url("images/spaceforthoughts.jpg");
+    background-image: url("images/IMG_1084.jpeg");
     background-repeat: no-repeat;
     background-position: top right;
     background-size: cover;
