--- a/styles/general.css
+++ b/styles/general.css
@@ -3,5 +3,6 @@
     background-repeat: no-repeat;
     background-position: top right;
     background-size: cover;
-    background-attachment: scroll;
+    background-color: #e0d8cb;
+    overflow: hidden;
   }
